<resources>
    <string name="app_name">Инвентаризация</string>
    <string name="activity_scan_by_sensor">ScanBySensorActivity</string>
    <string name="activity_scan_by_camera">ScanByCameraActivity</string>
    <string name="activity_main">Главная</string>
    <string name="iop">Позиция</string>

    <string name="result">Результат</string>
    <string name="copy">Copy</string>
    <string name="next">Далее</string>
    <string name="cwar">Склад</string>
    <string name="loca">Место</string>
    <string name="item">Изделие</string>
    <string name="clot">Партия</string>

    <string name="cwar_scanned">Склад отсканирован</string>
    <string name="iop_changed">Данные изменены</string>

    <string name="loca_scanned">Место отсканировано</string>
    <string name="clot_scanned">Партия отсканирована</string>
    <string name="item_scanned">Изделие отсканировано</string>

    <string name="test">Test</string>
    <string name="qntyTitle">Кол-во\n %1s2</string>
    <string name="qstrTitle">Кол-во по ИНВ-3\n%1s1 %1s2</string>
    <string name="qnty_exists">Запись существует</string>
    <string name="qnty_message">Место: %1s1\nВведите кол-во</string>
    <string name="qnty_message_update">Уже существует запись с отличным от нуля количеством. Желаете перезаписать?</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="qnty">Кол-во</string>


    <string name="home">Домой</string>
    <string name="settings">Настройки</string>
    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navigation_drawing">Close Navigation Drawing</string>
    <string name="input_password">Введите пароль</string>
    <string name="sign_in">Вход</string>
    <string name="back">Back</string>
    <string name="import_inventory_data">Загрузить данные инвентаризации</string>
    <string name="inventory_data_imported">Данные успешно загружены</string>
    <string name="inventory_data_exported">Данные успешно выгружены</string>
    <string name="export_inventory_data">Выгрузить данные инвентаризации</string>
    <string name="content_description_delete">Удалить запись</string>
    <string name="delete">Удалить</string>
    <string name="update">Изменить</string>
    <string name="delete_success">Запись удалена</string>
    <string name="save_success">Запись успешно сохранена</string>
    <string name="save_error">Не удалось сохранить запись</string>
    <string name="deleteTitle">Удалить запись?</string>
    <string name="deleteMessage">Удаление текущих значений на экране</string>
    <string name="scanCwar">Отсканируйте склад</string>
    <string name="scanLoca">Отсканируйте место</string>
    <string name="scanItem">Отсканируйте изделие</string>
    <string name="scanClot">Отсканируйте партию</string>
    <string name="enterQnty">Введите количество и сохраните</string>
    <string name="edit_and_save">Внесите изменения и сохраните</string>
    <string name="none">none</string>
    <string name="notCwarSnack">Пожалуйста, отсканируйте склад</string>
    <string name="notLocaSnack">Пожалуйста, отсканируйте место</string>
    <string name="cwar_not_found">Отсканированный склад не найден</string>
    <string name="cwar_equals">Отсканированный склад совпадает с текущим</string>
    <string name="loca_not_found">Отсканированное место не найдено</string>
    <string name="inventory_data_not_imported">Нет данных для инвентаризации</string>
    <string name="permission_granted">Разрешение получено</string>
    <string name="permission_not_granted">Разрешение не получено</string>
    <string name="header_title">Инвентаризация</string>
    <string name="header_text">Балтийский завод</string>
    <string name="other_subheader" />
    <string name="main_subheader">Главное</string>
    <string name="version">Cделано командой bz-infor версия</string>
    <string name="activity_password">Вход</string>
    <string name="activity_integration">Интеграция</string>
    <string name="integration">Интеграция</string>
    <string name="import_file_is_empty">Неверный путь к файлу</string>
    <string name="import_file_data_is_empty">Загружаемый файл с данными пустой</string>
    <string name="fragment_edit">Изменение позиции</string>
    <string name="sticker_print">Печать этикетки</string>
    <string name="edit">Изменить</string>
    <string name="wrong_item">Неправильное изделие</string>
    <string name="wrong_clot">Неправильная партия</string>

    <string name="clot_in_loca_message">Партия хранится на месте %1s1</string>
    <string name="clot_in_loca_title">Изменить системное место?</string>
    <string name="cwar_changed_title">Изменить склад?</string>
    <string name="cwar_changed_message">Отсканирован склад %1s1, заменить?</string>
    <string name="item_changed_title">Изменить изделие?</string>
    <string name="item_changed_message">Отсканировано изделие %1s1, заменить?</string>
    <string name="clot_in_loca_list_message">Партия хранится на других местах\n%1s1</string>
    <string name="clot_in_loca_list_title">Выбрать системное место?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="serialize_exception">Не получилось сохранить текущее состояние. Подробности в логах.</string>
    <string name="deserialize_exception">Не получилось загрузить прошлое состояние приложения. Подробности в логах.</string>
    <string name="menu_login">Вход</string>
    <string name="menu_settings">Настройки</string>
    <string name="empty_password">Пароль не должен быть пустым</string>
    <string name="wrong_password">Неверный пароль</string>
    <string name="stkr_switch">Печать этикетки</string>
    <string name="lock_switch">Брак</string>
    <string name="illiquid_switch">Неликвид</string>
    <string name="choose_clot">Выберите партию</string>
    <string name="search_clot">Поиск партии</string>
    <string name="turn_flash_on_off">Подсветка</string>
    <string name="select_an_import_file">Выберите файл</string>
    <string name="no_clots">Партий не найдено</string>
    <string name="no_locas">Мест не найдено</string>

    <string name="ok">ОК</string>
    <string name="cwar_uppercase">СКЛАД:</string>
    <string name="clot_uppercase">ПАРТИЯ:</string>
    <string name="item_uppercase">ИЗДЕЛИЕ:</string>
    <string name="porn_uppercase">ЗАКАЗ:</string>
    <string name="qstr_uppercase">КОЛ-ВО ИНВ-3:</string>
    <string name="qnty_uppercase">УЧТЕННОЕ КОЛ-ВО:</string>
    <string name="porns">Заказы</string>
    <string name="locas_select">Выбрать место</string>
    <string name="loca_uppercase">МЕСТО:</string>
    <string name="locas">Места</string>
    <string name="select">Выбрать</string>
    <string name="skip">Пропустить</string>
    <string name="no_iop_in_repo_title">Выбрать партию?</string>
    <string name="no_iop_in_repo_message">Нет позиции по ИНВ-3. Выберите партию по номеру закупок</string>
</resources>